# hackaton_2025

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml  test_gpg.py
alembic/: env.py
alembic/versions/: 5eae0624e532_initial_migration.py  9740d2772b69_renombrar_tabla_attendance_records_a_.py  e142cab43594_attendance_table_has_a_new_name_fixing_.py
app/: main.py
app/auth/: auth.py  jwt_handler.py
app/core/: config.py
app/db/: database.py
app/ml/: convert_model.py
app/models/: __init__.py  attendance.py  token_request.py  worker.py
app/routes/: attendance_routes.py  worker_routes.py
app/schemas/: attendance.py  worker.py
app/services/: attendance_service.py  worker_service.py
